# bloom-petal-near

./: .gitignore  AGENTS.md  README.md  petal-build.toml  petal.toml
.github/workflows/: ci.yml  release.yml
docs/: 2026-07-14-near-intents-petal-design.md
petal/: Cargo.toml
petal/src/: lib.rs
petal/wit/: route.wit
route/: Cargo.toml
route/files/: $index.rs  tokens.json.rs
route/files/meta/: $index.rs  route-contract.json.rs
route/files/settings/: $index.rs  api-key.rs  status.json.rs
route/files/swaps/: $index.rs
route/files/swaps/[wallet]/: $index.rs  latest.rs  new.rs
route/files/swaps/[wallet]/[id]/: $index.rs  abandon.rs  approval.json.rs  confirm.rs  outbox.json.rs  plan.md.rs  policy_check.json.rs  quote.json.rs  receipt.json.rs  refresh.rs  request.json.rs  review_intent.json.rs  status.json.rs
route/src/: api.rs  api_types.rs  assets.rs  evm.rs  input.rs  lib.rs  quote_signature.rs  redaction.rs  render.rs  runtime.rs  session.rs  settings.rs  workflow.rs
scripts/: build.sh  check-route-architecture.sh  e2e-cli.sh  validate.sh
sdk/src/: lib.rs
sdk/wit/: route.wit
xtask/: Cargo.toml
xtask/src/: main.rs
